fix misaligned liked and created_at fields

--- a/public/browse/style.css
+++ b/public/browse/style.css
@@ -33,6 +33,7 @@
 }
 
 .likes {
+    float: left;
     font-size: 1.3vmin;
 }
 
